# openconnect-sso-plus

./: .pre-commit-config.yaml  Makefile  PKGBUILD  README.md  flake.nix  pyproject.toml
.github/workflows/: build.yaml  build.yml
openconnect_sso/: app.py  authenticator.py  cli.py  config.py
openconnect_sso/browser/: webauthdialog.py  webengine_process.py
openconnect_sso/browser/ui/: webauthdialog.ui
