[tool.poetry]
name = "openconnect-sso"
version = "0.8.2"
description = "Wrapper script for OpenConnect supporting Azure AD (SAMLv2) authentication to Cisco SSL-VPNs"
license = "GPL-3.0-only"
authors = ["László Vaskó <laszlo.vasko@outlook.com>", "Emil Hemdal <emil@hemdal.se>"]
readme = "README.md"
homepage = "https://github.com/vlaci/openconnect-sso"
repository = "https://github.com/vlaci/openconnect-sso"

classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: Qt",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: POSIX :: Linux",
    "Topic :: System :: Networking",
]

[tool.poetry.scripts]
openconnect-sso = "openconnect_sso.cli:main"

[tool.poetry.dependencies]
python = "^3.10"
attrs = ">=25.1.0"
colorama = "^0.4.6"
lxml = "^4.9.4"
keyring = ">=23.13.1, <24.0.0"
prompt-toolkit = "^3.0.50"
pyxdg = ">=0.28, <0.29"
requests = "^2.32.3"
structlog = ">=25.1.0"
toml = "^0.10.2"
setuptools = "^75.8.0"
PySocks = "^1.7.1"
PyQt6 = "^6.8.0"
PyQt6-WebEngine = "^6.8.0"
pyotp = "^2.9.0"

[tool.poetry.dev-dependencies]
coverage_enable_subprocess = "^1.0"
pytest = "^7.4.4"
black = "^25.1.0"
pytest-asyncio = "^0.20.3"
pytest-cov = "^4.1.0"
pytest-httpserver = "^1.1.1"

[tool.black]
target-version = ['py310']

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"
